@@ -1,3 +1,7 @@
+Tue Mar 23 19:03:17 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* b-group-by.rb: REQ#203対応(その2)
+
 Fri Mar 19 23:28:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* b-group-by.rb: REQ#203対応
